--- a/src/main/resources/css/signup.css
+++ b/src/main/resources/css/signup.css
@@ -244,9 +244,43 @@ main .signin_btn {
     text-align: center;
     color: #ffffff40;
 }
-
 main .signin_btn.available {
     background-color: #ff5d34;
     color: white;
     cursor: pointer;
+}
+/* 메인 - 회원가입 완료페이지 */
+main .main_warp.finishpage {
+    height: 100vh;
+    justify-content: center;
+    margin: 0;
+}
+main .main_warp .finish_img {
+    width: 72px;
+    height: 72px;
+    margin-bottom: 24px;
+}
+main .main_warp .finish_img img {
+    width: 100%;
+    height: 100%;
+}
+main .main_warp .main_txt {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 48px;
+}
+main .main_warp a {
+    width: 100%;
+    color: white;
+    text-decoration: none;
+}
+main .main_warp a .gotomain_btn {
+    width: 100%;
+    height: 56px;
+    text-align: center;
+    line-height: 56px;
+    background-color: rgba(255, 255, 255, 0.063);
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 12px;
 }
