--- a/src/main/resources/css/signup.css
+++ b/src/main/resources/css/signup.css
@@ -7,7 +7,8 @@ header {
     width: calc(100% - 80px);
     height: 40px;
     padding: 12px 40px;
-    background: #23272d;
+    background: #ffffff10;
+    backdrop-filter: blur(40px);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -44,7 +45,7 @@ header .header_search input {
     width: 100%;
     height: 100%;
     border: none;
-    background: #272b31;
+    background: #ffffff10;
     padding-left: 43px;
     border-radius: 8px;
     outline: none;
