--- a/src/main/resources/css/login.css
+++ b/src/main/resources/css/login.css
@@ -45,6 +45,7 @@ header .search_box input {
   outline: none;
   color: #fff;
 }
+
 header .search_box::before {
   content: "";
   position: absolute;
@@ -84,8 +85,8 @@ main .main_logo {
   margin-bottom: 60px;
 }
 main .main_logo img {
-  width: 200px;
-  height: auto;
+  width: 140px;
+  height: 47px;
 }
 
 /* 로그인 영역 */
@@ -94,26 +95,39 @@ main .login_wrap {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
+}
+main .login_wrap .error-msg {
+  color: #ff5d34;
+  font-size: 13px;
+  margin-top: -10px;
+  margin-bottom: 10px;
 }
 
 /* 로그인 폼 */
 .loginform .id,
 .loginform .password {
   margin-bottom: 16px;
+  position: relative;
 }
 .loginform input {
-  width: 100%;
-  height: 56px;
+  width: 326px;
+  height: 54px;
   border: none;
-  border-radius: 12px;
+  outline: none;
   padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 12px;
   font-size: 16px;
   background: #272b31;
   color: white;
-  outline: none;
 }
-
+.loginform input:focus {
+  outline: 1px solid white;
+}
+.loginform input.input-error {
+  outline: 1px solid #ff5d34;
+}
 /* 로그인 버튼 */
 .main_login_btn {
   width: 100%;
@@ -121,30 +135,47 @@ main .login_wrap {
   background-color: #ff5d34;
   color: white;
   border: none;
-  padding-left: 16px;
   border-radius: 12px;
   font-size: 16px;
   cursor: pointer;
 }
 
+main .loginform .password .eye_toggle_but {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  width: 24px;
+  height: 24px;
+  background-image: url(../img/pw_view_no.png);
+  background-size: cover;
+  cursor: pointer;
+}
+main .loginform .password .eye_toggle_but.viewing {
+  background-image: url(../img/pw_view.png);
+}
 .sub_fuc {
   margin-top: 24px;
   display: flex;
   justify-content: center;
   gap: 24px;
-  font-size: 14px;
 }
 .sub_fuc a {
+  font-size: 14px;
   color: #81878d;
   text-decoration: none;
 }
 .sub_fuc a:hover {
   text-decoration: underline;
 }
-
+.sub_fuc div {
+  font-size: 10px;
+  color: #81878d;
+  text-decoration: none;
+  padding-top: 3px;
+}
 /* 소셜 아이콘 */
 .social_icons {
-  margin-top: 40px;
+  margin-top: 60px;
   display: flex;
   justify-content: center;
   gap: 24px;
