--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     background: #1f2329;
+    position: relative;
 }
 table,
 th,
@@ -434,4 +435,172 @@ footer .footer_pj_link a:nth-child(2) {
 footer .footer_pj_link .footer_pjimg {
     width: 32px;
     height: 32px;
+}
+.chat_wrap {
+    position: fixed;
+    width: fit-content;
+    right: 40px;
+    bottom: 40px;
+}
+.chat_btn {
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    border-radius: 64px;
+    background-color: #ff5d34;
+    box-shadow: 0 4px 4px 0 #00000040;
+    right: 0px;
+    bottom: 0px;
+}
+.chat_btn img {
+    width: 32px;
+    height: 32px;
+    padding: 16px;
+    cursor: pointer;
+}
+.chat_popup_top {
+    backdrop-filter: blur(100px);
+}
+.chat_popup {
+    position: absolute;
+    width: 640px;
+    height: 465px;
+    right: 0px;
+    bottom: 84px;
+    background-color: #ffffff0d;
+    color: white;
+    border-radius: 28px;
+    box-shadow: 0 4px 4px 0 #00000040;
+    overflow: hidden;
+    display: none;
+}
+.chat_popup .chat_popup_title {
+    height: 36px;
+    border-bottom: 1px solid #ffffff1a;
+    padding: 22px 32px;
+    display: flex;
+    justify-content: space-between;
+}
+.chat_popup .chat_popup_title .chat_popup_title_txt {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 40px;
+}
+.chat_popup .chat_popup_title .chat_popup_closebtn {
+    width: 36px;
+    height: 36px;
+    cursor: pointer;
+}
+.chat_popup .chat_popup_title .chat_popup_closebtn img {
+    width: 100%;
+    height: 100%;
+}
+.chat_popup .chat_popup_content {
+    padding: 32px 32px 100px 32px;
+    overflow-y: scroll;
+    height: 253px;
+    backdrop-filter: blur(100px);
+}
+.chat_popup .chat_popup_content::-webkit-scrollbar {
+    display: none;
+}
+.chat_popup .chat_talk_block {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    margin-bottom: 12px;
+}
+.chat_popup .chat_talk_profile_img {
+    width: 36px;
+    height: 36px;
+}
+.chat_popup .chat_talk_profile_img img {
+    width: 100%;
+    height: 100%;
+}
+.chat_popup .chat_talk_profile_name {
+    font-size: 13px;
+    color: #81878d;
+    line-height: 150%;
+    margin-bottom: 6px;
+}
+.chat_popup .chat_talk_bubble_wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+}
+.chat_popup .chat_talk_bubble_wrap .chat_talk_bubble {
+    padding: 8px 16px;
+    background: #ffffff0d;
+    border-radius: 12px;
+    font-size: 14px;
+    width: fit-content;
+    line-height: 170%;
+}
+.chat_popup .chat_talk_bubble_wrap .chat_talk_bubble:last-child {
+    position: relative;
+}
+.chat_popup .chat_talk_bubble_wrap .chat_talk_bubble .chat_talk_time {
+    position: absolute;
+    left: calc(100% + 8px);
+    bottom: 0px;
+    font-size: 12px;
+    color: #646b72;
+}
+.chat_popup .chat_talk_block.mychat {
+    justify-content: flex-end;
+}
+.chat_popup .chat_talk_block.mychat .chat_talk_bubble_wrap {
+    align-items: flex-end;
+}
+.chat_popup .chat_talk_block.mychat .chat_talk_bubble_wrap .chat_talk_bubble {
+    background: #ff5d34;
+}
+.chat_popup .chat_talk_block.mychat .chat_talk_bubble_wrap .chat_talk_bubble .chat_talk_time {
+    right: calc(100% + 8px);
+    left: unset;
+}
+.chat_popup .chat_popup_input_wrap {
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 48px);
+    backdrop-filter: blur(100px);
+    z-index: 100;
+    padding: 24px;
+    display: flex;
+    gap: 8px;
+    flex-direction: row;
+}
+.chat_popup .chat_popup_input_wrap .chat_popup_input {
+    width: 536px;
+    height: 48px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.chat_popup .chat_popup_input_wrap .chat_popup_input input {
+    padding: 16px;
+    width: calc(100% - 32px);
+    background-color: #ffffff0d;
+    border: none;
+    outline: none;
+    color: white;
+}
+.chat_popup .chat_popup_input_wrap .chat_popup_input_btn {
+    width: 48px;
+    height: 48px;
+    background: #ffffff33;
+    border: none;
+    padding: 0;
+    border-radius: 8px;
+}
+.chat_popup .chat_popup_input_wrap .chat_popup_input_btn.on {
+    background: #ff5d34;
+    cursor: pointer;
+}
+.chat_popup .chat_popup_input_wrap .chat_popup_input_btn img {
+    width: 24px;
+    height: 24px;
+    padding: 12px;
 }
